Added docker container detection support
